prevent background scrolling on mobile

--- a/src/pages/FAQ/FAQ.module.css
+++ b/src/pages/FAQ/FAQ.module.css
@@ -5,7 +5,7 @@
     -o-background-size: cover;
     background-size: cover;
 
-    height: calc(100svh - 50px);
+    height: calc(100svh - 60px);
     overflow: hidden;
 }
 
@@ -42,9 +42,7 @@
     position: relative;
 }
 
-.header_container{
-    
-  
+.header_container {
     display: flex;
     flex-direction: column;
     height: 76px;
@@ -55,7 +53,6 @@
     font-weight: 100;
     font-size: 30px;
     line-height: 38px;
-    
 }
 
 .sub_header {
@@ -96,6 +93,7 @@
     color: var(--accent1);
 }
 
-.content ul, .styled_element {
+.content ul,
+.styled_element {
     margin-left: 1rem;
 }
